# all_outh_login

./: .dockerignore  .env.examples  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2376fd1d790b_init_user_table.py  c9e516dd8065_add_oauth_model.py  f66bc4f1d85d_initial_migration.py
src/: main.py
src/api/v1/: auth_routes.py  token_routes.py
src/core/: database.py  security.py
src/models/: oauth_model.py  user_model.py
src/oauth/: github.py  google.py  x.py
src/schemas/: token_schema.py  user_schema.py
src/services/: user_service.py
src/utils/: logger.py
