[project]
name = "all-outh-login"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.9.0",
    "pre-commit>=4.2.0",
    "pyjwt>=2.10.1",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.115.14",
    "python-decouple>=3.8",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
    "authlib>=1.6.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
]
